<resources>
    <string name="app_name">GeoGames</string>

    <string name="main_activity_search_title">Search</string>
    <string name="main_activity_games_title">Games</string>
    <string name="main_activity_sign_in_title">Sign In</string>
    <string name="main_activity_sign_out_title">Sign out</string>

    <string name="create_account_action_sing_up">sign Up</string>
    <string name="create_account_username">username</string>
    <string name="create_account_mail">mail</string>
    <string name="create_account_password">password</string>
    <string name="create_account_top_text">create your account here</string>
    <string name="create_account_empty_credentials">Credentials cannot be empty.</string>
    <string name="create_account_invalid_email">Invalid email.</string>
    <string name="create_account_undefined_api_error">Internal server error. Please, contact the administrator.</string>
    <string name="create_account_internet_error">Couldn`t connect to the server. Check your internet connection.
    </string>

    <string name="sign_in_username">username</string>
    <string name="sign_in_password">password</string>
    <string name="sign_in_action_sign_in">sign In</string>
    <string name="sign_in_create_account_label">You don\'t have an account? Create it here.</string>
    <string name="sign_in_empty_credentials">Not username nor password can be empty.</string>
    <string name="sign_in_incorrect_credentials">Incorrect username or password.</string>
    <string name="sign_in_undefined_api_error">Internal server error. Please, contact the administrator.</string>
    <string name="sign_in_internet_error">Couldn`t connect to the server. Check your internet connection.</string>

    <string name="add_game_dialog_game_title">Game Title</string>
    <string name="add_game_dialog_game_author">Game Author</string>
    <string name="add_game_dialog_game_description">Game Description</string>
    <string name="add_game_dialog_game_password">Password</string>

    <string name="app_bar_title_search">Search games</string>
    <string name="app_bar_title_my_games">Downloaded games</string>
    <string name="app_bar_title_sign_in">Sign In</string>
    <string name="app_bar_title_sign_up">Sign Up</string>
    <string name="app_bar_title_create_game">Create new game</string>
    <string name="app_bar_title_play_game">Play game</string>

    <string name="create_account_if_you_dont_have_it_yet">You don\'t have an account? Create it here.</string>
    <string name="progress">Progress:</string>
    <string name="game_title">Game Title</string>
    <string name="author">Author</string>

    <string name="create_game_empty_fields">No field can be empty.</string>
    <string name="create_game_success">Game has been created successfully.</string>
    <string name="create_game_internet_error">Check your internet connection.</string>
    <string name="create_game_unauthorized_error">Session has expired. Please sign in again.</string>
    <string name="create_game_internal_server_error">Internal server error.</string>


    <string name="app_label">App label</string>
    <string name="search_hint">Search games</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
