<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

    <LinearLayout
            android:id="@+id/sign_in_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

        <AutoCompleteTextView
                android:id="@+id/sign_in_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_in_username"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:singleLine="true"/>

        <EditText
                android:id="@+id/sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_in_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in_action_sign_in"
                android:textStyle="bold" />

    </LinearLayout>
    <TextView
            android:id="@+id/log_in_sign_up_button"
            android:text="@string/sign_in_create_account_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" android:layout_marginTop="169dp"
            android:textColor="@color/linkColor"/>
</RelativeLayout>
