<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <RelativeLayout android:layout_height="70dp"
                    android:layout_width="match_parent"
                    xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
                android:id="@+id/game_author"
                android:layout_width="100dp"
                android:textAlignment="textEnd"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/author"/>

        <TextView
                android:id="@+id/game_title"
                android:layout_width="200dp"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/game_title"
                android:gravity="center"/>


        <TextView
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/progress"
                android:textAlignment="textEnd"
                android:layout_marginEnd="90dp"/>

        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:id="@+id/game_progress_bar"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp" android:layout_marginBottom="0dp"/>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>